# Algo

./: Cargo.toml
src/: bubblesort.rs  insertionsort.rs  lib.rs  quicksort.rs  selectionsort.rs
