[package]
name = "Algo"
version = "0.1.0"
edition = "2021"

[lib]
name = "algorithms"
path = "src/lib.rs"

[[bin]]
name = "num_of_good_pairs"
path = "src/bin/num_of_good_pairs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
